tests/snapshots/composition/bare_imports_alphabetized.diagnostics.snap
---
source: tests/diagnostics.rs
assertion_line: 39
expression: render(&diagnostics)
input_file: tests/fixtures/composition/bare_imports_alphabetized.input.py
---
alphabetize@272..297
bare-import-allowlist@272..276
bare-import-allowlist@284..286
bare-import-allowlist@294..297
