tests/snapshots/composition/bare_imports_alphabetized.input.py.snap
---
source: tests/integration.rs
assertion_line: 28
expression: output
input_file: tests/fixtures/composition/bare_imports_alphabetized.input.py
---
"""
Bare imports outside the default allowlist arrive out of order.
alphabetize reorders the statements and bare-import-allowlist
emits a diagnostic per offending import whose range tracks the
post-reorder offset.

Rules:
- alphabetize
- bare-import-allowlist
"""

import json
import os
import sys
