tests/snapshots/composition/blank_lines_between_classes.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/composition/blank_lines_between_classes.input.py
---
alphabetize@287..336
blank-lines@280..281
blank-lines@293..294
blank-lines@302..303
blank-lines@315..316
blank-lines@324..325
blank-lines@337..338
