tests/snapshots/composition/class_constructor_and_methods.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/composition/class_constructor_and_methods.input.py
---
align-equals@312..313
align-equals@340..341
alphabetize@386..520
blank-lines@377..378
blank-lines@426..427
blank-lines@475..476
