tests/snapshots/composition/class_essentials.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/composition/class_essentials.input.py
---
align-colons@491..491
align-colons@520..520
align-colons@541..541
align-colons@564..564
align-equals@501..502
align-equals@531..532
align-equals@588..589
align-imports@424..425
alphabetize@386..850
bare-import-allowlist@444..446
bare-import-allowlist@454..457
docstring-wrap@73..368
