tests/snapshots/composition/class_essentials.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/composition/class_essentials.input.py
---
"""
Cross-rule composition on a small class: alphabetize reorders methods into
the canonical dunder / property / private / public groups, alphabetizes
annotated fields, and sorts both bare and from-import runs at the module
top. align_colons and align_equals then settle the field-declaration
columns. The full pipeline running twice on this input produces no further
change.
"""

from collections import Counter
from typing      import Any

import os
import sys


class Posting:
    company     : str   = "TBD"
    description : str   = ""
    salary      : float = 0.0
    title       : str   = "Untitled"

    def __init__(self):
        pass

    def __repr__(self):
        return f"Posting({self.title})"

    @property
    def name(self):
        return self.title

    def _internal(self):
        pass

    def update(self, *, atomic=True, retries=3):
        return self
