tests/snapshots/composition/class_field_block.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/composition/class_field_block.input.py
---
"""
A class body with annotated field declarations out of alphabetical
order, varying name widths, and default values of varying widths.

Rules:
- alphabetize
- align_colons
- align_equals
"""


class Endpoint:
    backend_label: str  = "primary"
    host        : str   = "localhost"
    retry_count : int   = 3
    timeout     : float = 30.0
