tests/snapshots/composition/dict_inside_match.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/composition/dict_inside_match.input.py
---
align-colons@360..360
align-colons@395..395
align-colons@429..429
align-colons@467..467
align-colons@557..557
align-colons@591..591
align-colons@625..625
align-colons@664..664
collection-layout@337..413
collection-layout@456..534
match-case-align@707..720
